--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+scales.major="WWHWWWH"
+scales.minor="WHWWHWW"
+scales.pentatonic="WWHWH"
+scales.blues="WHWWHWW"
+scales.wholeTone="WWWWWW"
+scales.chromatic="HHHHHHHHHHHH"
+
+step.semitone=1
+step.wholeTone=2
+
+midi.base.notes=C,D,E,F,G,A,B
+
+midi.lowestNote=24
+midi.lowestNote.name="C0"
+midi.highestNote=108
+midi.highestNote.name="C8"
 
