--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.sellist'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '21'
+	sourceCompatibility = '19'
 }
 
 configurations {
@@ -30,6 +30,9 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.1.2'
+	implementation 'org.apache.logging.log4j:log4j-api:2.23.0'
+	implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
 }
 
 tasks.named('test') {
