--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ step.semitone=1
 step.wholeTone=2
 
 midi.base.notes=C,D,E,F,G,A,B
+midi.base.notes.flat=C,Db,D,Eb,E,F,Gb,G,Ab,A,Bb,B
+midi.base.notes.sharp=C,C#,D,D#,E,F,F#,G,G#,A,A#,B
+
+scales.sharps=C,D,A,E,B,F#,C#,G#,D#,A#
+scales.flats=C,F,Bb,Eb,Ab,Db,Gb,Cb,Fb
 
 midi.lowestNote=24
 midi.lowestNote.name="C0"
