--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,10 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.1.2'
-	implementation 'org.apache.logging.log4j:log4j-api:2.23.0'
-	implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.3'
+	implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
+	implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 }
 
 tasks.named('test') {
