add working double sharps and double flats, fix octave issues, add scale degree yaml

--- a/src/main/resources/sequentialScales.yaml
+++ b/src/main/resources/sequentialScales.yaml
@@ -1,11 +1,6 @@
 major: "W,W,H,W,W,W,H"
 minor: "W,H,W,W,H,W,W"
-dorian: "W,H,W,W,W,H,W"
-phrygian: "H,W,W,W,H,W,W"
-lydian: "W,W,W,H,W,W,H"
-mixolydian: "W,W,H,W,W,H,W"
-locrian: "H,W,W,H,W,W,W"
-chromatic: "H,H,H,H,H,H,H,H,H,H,H,H"
-blues: "H,W,W,H,H,W"
-harmonic_minor: "W,H,W,W,H,A,H"
-whole_tone: "W,W,W,W,W,W"
+acoustic: "W,W,W,H,W,H,W"
+aeolian: "W,H,W,W,H,W,W"
+altered: "H,W,H,W,W,W,W"
+augmented: ""
