switch from direct cache calls to autowired cache interface

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-cache.provider=memory
+flashcards.cache.memory.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 server.tomcat.relaxed-query-chars=[,]
