--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,3 +31,5 @@ jobs:
           ${{ runner.os }}-maven-
     - name: Build with Maven
       run: mvn -B clean verify
+    - name: Run Tests with Maven
+      run: mvn -B clean test
